@@ -4,6 +4,7 @@ import com.planet_ink.coffee_mud.core.*;
 import com.planet_ink.coffee_mud.core.CMLib.Library;
 import com.planet_ink.coffee_mud.core.collections.*;
 import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.MaskingLibrary.CompiledZMask;
 import com.planet_ink.coffee_mud.Abilities.interfaces.*;
 import com.planet_ink.coffee_mud.Areas.interfaces.*;
 import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
@@ -41,7 +42,7 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 		return "AutoTitles";
 	}
 
-	private TriadSVector<String,String,MaskingLibrary.CompiledZMask> autoTitles=null;
+	private Map<String,AutoTitle> autoTitles=null;
 
 	private static final String titleFilename = "titles.ini";
 
@@ -68,8 +69,20 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 		if(x<0)
 			return "Error: Invalid line! Not comment, whitespace, and does not contain an = sign!";
 		final String title=row.substring(0,x).trim();
-		final String mask=row.substring(x+1).trim();
-
+		final String partialmask=row.substring(x+1).trim();
+		final int colon=partialmask.indexOf(':');
+		final int max;
+		final String mask;
+		if((colon>0)&&(CMath.isInteger(partialmask.substring(0,colon).trim())))
+		{
+			max=CMath.s_int(partialmask.substring(0,colon).trim());
+			mask=partialmask.substring(colon+1);
+		}
+		else
+		{
+			mask=partialmask;
+			max=0;
+		}
 		if(title.length()==0)
 			return "Error: Blank title: "+title+"="+mask+"!";
 		if(mask.length()==0)
@@ -78,12 +91,53 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 		{
 			if(autoTitles==null)
 				reloadAutoTitles();
-			for(final Triad<String,String,MaskingLibrary.CompiledZMask> triad : autoTitles)
+			for(final String ID : autoTitles.keySet())
 			{
-				if(triad.first.equalsIgnoreCase(title))
+				if(ID.equalsIgnoreCase(title))
 					return "Error: Duplicate title: "+title+"="+mask+"!";
 			}
-			autoTitles.add(new Triad<String,String,MaskingLibrary.CompiledZMask>(title,mask,CMLib.masking().maskCompile(mask)));
+			final AutoTitle A = new AutoTitle()
+			{
+				private final String		t	= title;
+				private final String		m	= mask;
+				private final int			x	= max;
+				private final CompiledZMask	M	= CMLib.masking().maskCompile(mask);
+				private volatile int		ctr	= 0;
+
+				@Override
+				public String getTitle()
+				{
+					return t;
+				}
+
+				@Override
+				public String getMaskStr()
+				{
+					return m;
+				}
+
+				@Override
+				public CompiledZMask getMask()
+				{
+					return M;
+				}
+
+				@Override
+				public int getMax()
+				{
+					return x;
+				}
+
+				@Override
+				public int bumpCounter(final int amt)
+				{
+					ctr += amt;
+					return ctr;
+				}
+			};
+			autoTitles.put(title,A);
+			if(A.getMax() > 0)
+				updateTitleMax(A);
 		}
 		return null;
 	}
@@ -94,9 +148,11 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 		if(autoTitles==null)
 			reloadAutoTitles();
 		title=title.trim();
-		for(final Triad<String,String,MaskingLibrary.CompiledZMask> triad : autoTitles)
+		if(autoTitles.containsKey(title))
+			return true;
+		for(final String ID : autoTitles.keySet())
 		{
-			if(triad.first.equalsIgnoreCase(title))
+			if(ID.equalsIgnoreCase(title))
 				return true;
 		}
 		return false;
@@ -107,7 +163,7 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 	{
 		if(autoTitles==null)
 			reloadAutoTitles();
-		return autoTitles.firstElements();
+		return new IteratorEnumeration<String>(autoTitles.keySet().iterator());
 	}
 
 	@Override
@@ -115,10 +171,12 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 	{
 		if(autoTitles==null)
 			reloadAutoTitles();
-		for(final Triad<String,String,MaskingLibrary.CompiledZMask> triad : autoTitles)
+		if(autoTitles.containsKey(title))
+			return autoTitles.get(title).getMaskStr();
+		for(final String ID : autoTitles.keySet())
 		{
-			if(triad.first.equalsIgnoreCase(title))
-				return triad.second;
+			if(ID.equalsIgnoreCase(title))
+				return autoTitles.get(ID).getMaskStr();
 		}
 		return "";
 	}
@@ -133,64 +191,75 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 			return false;
 		if(autoTitles==null)
 			reloadAutoTitles();
-		String title=null;
-		MaskingLibrary.CompiledZMask mask=null;
 		int pdex=0;
 		final List<String> ptV=P.getTitles();
 		boolean somethingDone=false;
-		synchronized(ptV)
+		synchronized(P)
 		{
-			for(final Triad<String,String,MaskingLibrary.CompiledZMask> triad : autoTitles)
+			for(final String title : autoTitles.keySet())
 			{
-				mask=triad.third;
-				title=triad.first;
-				pdex=ptV.indexOf(title);
-				if(pdex<0)
-				{
-					final String fixedTitle = CMStrings.removeColors(title).replace('\'', '`');
-					for(int p=ptV.size()-1;p>=0;p--)
-					{
-						try
-						{
-							final String tit=CMStrings.removeColors(ptV.get(p)).replace('\'', '`');
-							if(tit.equalsIgnoreCase(fixedTitle))
-							{
-								pdex=p;
-								break;
-							}
-						}
-						catch(final java.lang.IndexOutOfBoundsException ioe)
-						{
-						}
-					}
-				}
-
+				final AutoTitle A = autoTitles.get(title);
+				final CompiledZMask mask = A.getMask();
+				final String fixedTitle = title.replace('\'', '`');
+				pdex=getTitleIndex(ptV, title, fixedTitle);
 				if(CMLib.masking().maskCheck(mask,mob,true))
 				{
 					if(pdex<0)
 					{
 						P.addTitle(title);
 						P.addTitle(title); // put it on TOP!
+						A.bumpCounter(1);
+						if((A.getMax()>0)&&(A.bumpCounter(0)>A.getMax()))
+							dispossessOldTimers(A,mob);
 						somethingDone=true;
 					}
 				}
 				else
 				if(pdex>=0)
 				{
-					somethingDone=true;
-					P.delTitle(title);
+					if(P.delTitle(title)||P.delTitle(fixedTitle))
+					{
+						somethingDone=true;
+						A.bumpCounter(-1);
+					}
 				}
 			}
 		}
 		return somethingDone;
 	}
 
-	protected void dispossesTitle(final String title)
+	protected int getTitleIndex(final List<String> ptV, final String title, final String fixedTitle)
 	{
-		final List<String> list=CMLib.database().getUserList();
-		final String fixedTitle = CMStrings.removeColors(title).replace('\'', '`');
-		for(final String playerName : list)
+		int pdex=ptV.indexOf(title);
+		if(pdex<0)
 		{
+			for(int p=ptV.size()-1;p>=0;p--)
+			{
+				try
+				{
+					final String tit=ptV.get(p).replace('\'', '`');
+					if(tit.equalsIgnoreCase(fixedTitle))
+					{
+						pdex=p;
+						break;
+					}
+				}
+				catch(final java.lang.IndexOutOfBoundsException ioe)
+				{
+				}
+			}
+		}
+		return pdex;
+	}
+
+	protected void updateTitleMax(final AutoTitle A)
+	{
+		final String title = A.getTitle();
+		final String fixedTitle = title.replace('\'', '`');
+		final PairList<String,Long> players = CMLib.database().DBSearchPFIL("<TITLE>"+title+"</TITLE>");
+		for(final Pair<String, Long> player : players)
+		{
+			final String playerName = player.first;
 			final MOB chkM=CMLib.players().getPlayer(playerName);
 			final PlayerStats pStats;
 			if(chkM != null)
@@ -200,41 +269,121 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 			if(pStats != null)
 			{
 				final List<String> ptV=pStats.getTitles();
-				synchronized(ptV)
+				synchronized(pStats)
 				{
-					int pdex=ptV.indexOf(title);
-					if(pdex<0)
+					final int pdex=getTitleIndex(ptV,title,fixedTitle);
+					if(pdex>=0)
+						A.bumpCounter(1);
+				}
+			}
+		}
+	}
+
+	protected void dispossessOldTimers(final AutoTitle A, final MOB mob)
+	{
+		final String fixedTitle = A.getTitle().replace('\'', '`');
+		final PairList<String,Long> players = CMLib.database().DBSearchPFIL("<TITLE>"+A.getTitle()+"</TITLE>");
+		for(final Pair<String, Long> player : players)
+		{
+			final MOB M=CMLib.players().getPlayerAllHosts(player.first);
+			if((M!=null)
+			&&(M.playerStats()!=null))
+				player.second=Long.valueOf(M.playerStats().getLastDateTime());
+		}
+		Collections.sort(players, new Comparator<Pair<String,Long>>()
+		{
+			@Override
+			public int compare(final Pair<String, Long> o1, final Pair<String, Long> o2)
+			{
+				return o1.second.compareTo(o2.second);
+			}
+		});
+		for(final Pair<String, Long> player : players)
+		{
+			if(A.bumpCounter(0)<=A.getMax())
+				break;
+			if(player.first.equalsIgnoreCase(mob.Name()))
+				continue;
+			final MOB chkM=CMLib.players().getPlayer(player.first);
+			final PlayerStats pStats;
+			if(chkM != null)
+				pStats = chkM.playerStats();
+			else
+				pStats = CMLib.database().DBLoadPlayerStats(player.first);
+			if(pStats != null)
+			{
+				final List<String> ptV=pStats.getTitles();
+				synchronized(pStats)
+				{
+					final int pdex=getTitleIndex(ptV,A.getTitle(),fixedTitle);
+					if(pdex>=0)
 					{
-						for(int p=ptV.size()-1;p>=0;p--)
+						final MOB M=CMLib.players().getLoadPlayer(player.first);
+						if((M!=null)
+						&&(M.playerStats()!=null))
 						{
-							try
+							if(M.playerStats().delTitle(A.getTitle())
+							||M.playerStats().delTitle(fixedTitle))
 							{
-								final String tit=CMStrings.removeColors(ptV.get(p)).replace('\'', '`');
-								if(tit.equalsIgnoreCase(fixedTitle))
-								{
-									pdex=p;
-									break;
-								}
-							}
-							catch(final java.lang.IndexOutOfBoundsException ioe)
-							{
+								A.bumpCounter(-1);
+								CMLib.database().DBUpdatePlayerPlayerStats(M);
 							}
 						}
 					}
+				}
+			}
+		}
+	}
+
+	protected void dispossesTitle(final String title)
+	{
+		final String fixedTitle = title.replace('\'', '`');
+		final PairList<String,Long> players = CMLib.database().DBSearchPFIL("<TITLE>"+title+"</TITLE>");
+		for(final Pair<String, Long> player : players)
+		{
+			final String playerName = player.first;
+			final MOB chkM=CMLib.players().getPlayer(playerName);
+			final PlayerStats pStats;
+			if(chkM != null)
+				pStats = chkM.playerStats();
+			else
+				pStats = CMLib.database().DBLoadPlayerStats(playerName);
+			if(pStats != null)
+			{
+				final List<String> ptV=pStats.getTitles();
+				synchronized(pStats)
+				{
+					final int pdex=getTitleIndex(ptV,title,fixedTitle);
 					if(pdex>=0)
 					{
 						final MOB M=CMLib.players().getLoadPlayer(playerName);
 						if((M!=null)
 						&&(M.playerStats()!=null))
 						{
-							M.playerStats().delTitle(title);
-							if(!CMLib.flags().isInTheGame(M,true))
+							if(M.playerStats().delTitle(title)
+							||M.playerStats().delTitle(fixedTitle))
 								CMLib.database().DBUpdatePlayerPlayerStats(M);
 						}
 					}
 				}
 			}
 		}
+	}
+
+	@Override
+	public AutoTitle getAutoTitle(String title)
+	{
+		if(autoTitles==null)
+			reloadAutoTitles();
+		title=title.trim();
+		if(autoTitles.containsKey(title))
+			return autoTitles.get(title);
+		for(final String ID : autoTitles.keySet())
+		{
+			if(ID.equalsIgnoreCase(title))
+				return autoTitles.get(ID);
+		}
+		return null;
 	}
 
 	@Override
@@ -284,7 +433,7 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 	@Override
 	public void reloadAutoTitles()
 	{
-		autoTitles=new TriadSVector<String,String,MaskingLibrary.CompiledZMask>();
+		autoTitles=new STreeMap<String,AutoTitle>();
 		final Iterator<String> k=Resources.findResourceKeys(getTitleFilename());
 		while(k.hasNext())
 			Resources.removeResource(k.next());
@@ -304,7 +453,7 @@ public class AutoTitles extends StdLibrary implements AutoTitlesLibrary
 			final MOB M=e.nextElement();
 			if(M.playerStats()!=null)
 			{
-				if((evaluateAutoTitles(M))&&(!CMLib.flags().isInTheGame(M,true)))
+				if(evaluateAutoTitles(M))
 					CMLib.database().DBUpdatePlayerPlayerStats(M);
 			}
 		}
