@@ -1,12 +1,16 @@
 # This file contains definitions for automatically assigned player titles.
-# The format of this file is one title definition per line.  A title definition is of the following form:
-# [TITLE]=[ZAPPER MASK]
+# The format of this file is one title definition per line.  
+# A title definition is of the following form:
+# [TITLE]=([MAX TITLES]:)[ZAPPER MASK]
 # [TITLE] is a free-form string for the title.  It must be unique in 
 # this list.  Titles can include letters, digits, spaces, and special 
 # characters except the = sign.  The * character will always be 
 # substituted with the players name.  If the title is wrapped in braces 
 # {}, then it will denote a mandatory title.  The player may not change 
 # a mandatory title.
+# [MAX TITLES] is the maximum number of players who can have the title.
+# When a new player gains the title going over the limit, the most idle
+# player with the title will lose it.
 # [ZAPPER MASK] is a standard mask denoting players who will be given 
 # this title.  Players who gain the title can have it taken away should 
 # they no longer meet the criterium of the mask.  See archon help on 
@@ -16,10 +20,14 @@
 # Player titles are updated every mud-hour (10 mins) automatically by 
 # the system for all players on-line and in memory.
 #
-# Example: 
+# Examples: 
+# Father *=1:-area "+new area" +midgaard
 # {* the dude}=-area "+new area" +midgaard
 
 * is excited=-baseclass +praetor
 
 
 * the blah=-questwin +normal_collect_1
+
+
+* Kaboom=1:+NAMES
